# cali-api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.yml
.github/ISSUE_TEMPLATE/: issue-template.yml
docker/dev/django/: Dockerfile  start
docker/dev/nginx/: Dockerfile  nginx.conf
docker/prd/django/: Dockerfile  start
docker/prd/nginx/: Dockerfile  nginx.conf
src/: manage.py
src/config/: core_urls.py  env.py  wsgi.py
src/config/django/: base.py  dev.py  prd.py
src/config/settings/: debug_toolbar.py  exception_handler.py  google_api_client.py  jwt.py  kakao_oauth2.py  middleware.py  rest_framework.py  storages.py
src/event_calendar/: apps.py  exceptions.py  signal.py  urls.py
src/event_calendar/migrations/: 0001_initial.py  0002_remove_youtubemusicevent_music_url_and_more.py  0002_shareimage.py  0003_alter_eventcalendar_options_alter_eventcalendar_user_and_more.py  0004_auto_20241217_2037.py  0005_alter_eventcalendar_comment_detail.py
src/event_calendar/models/: __init__.py  event_calendar.py  share_image.py  youtube_music.py
src/event_calendar/serializers/: calendar_serializer.py
src/event_calendar/services/: calendar_service.py
src/event_calendar/views/: __init__.py  views.py  (+4 more)
src/guest_book/: apps.py  exceptions.py  urls.py
src/profiles/: apps.py  exceptions.py  signal.py  urls.py
src/search/: exceptions.py  urls.py
src/shared/: api.py  mixin.py  models.py
src/user/: exceptions.py  urls.py
(+30 files in other folders)
