[project]
name = "cali-api"
version = "0.1.0"
description = "Calendar Playlist"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==24.4.2",
    "click>=8.1.7",
    "django-cors-headers>=4.6.0",
    "django-environ>=0.11.2",
    "djangorestframework-simplejwt>=5.3.1",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.27.2",
    "requests>=2.32.3",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = false
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.4.6",
]
